--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -1,46 +1,45 @@
 {% extends "_base.html" %}
 {% load core_extras %}
-
 {% load staticfiles %}
-{% block custom_header_links %}
-<link rel="stylesheet" href="{% static 'css/pe-icon-7-stroke.css' %}">
-<link rel="stylesheet" href="{% static 'css/linea_basic.css' %}">
-<link rel="stylesheet" href="{% static 'css/linea_arrows.css' %}">
-<link rel="stylesheet" href="{% static 'css/linea_software.css' %}">
-<link rel="stylesheet" href="{% static 'css/linea_ecommerce.css' %}">
+{% block extra_header_links %}
+    <link rel="stylesheet" href="{% static 'css/linea_basic.css' %}">
+    <link rel="stylesheet" href="{% static 'css/linea_software.css' %}">
+    <link rel="stylesheet" href="{% static 'css/pe-icon-7-stroke.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/charts.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bubbletree.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/horizontal-timeline.css' %}" />
 {% endblock %}
 
-
 {% block header %}
-    <div class="pma-search-bar pma-bg-blue ">
-        <div class="container">
-            <div class="row">
-            <div class="col-md-12">
-                <form method="GET" class="navbar-form navbar-left" role="search">
-                <div class="form-group">
-                    <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Año <span class="caret"></span></button>
-                        <ul class="dropdown-menu">
-                        {% for ayear in year_list %}
-                          <li><a href="#" ref="{{ayear}}">{{ayear}}</a></li>
-                        {% endfor %}
-                        </ul>
-                    </div>
-                    <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Municipio <span class="caret"></span></button>
-                        <ul class="dropdown-menu">
-                        {% for amunicipio in municipio_list %}
-                          <li><a href="#" ref="{{amunicipio.slug}}">{{amunicipio}}</a></li>
-                        {% endfor %}
-                        </ul>
-                    </div><!-- /btn-group -->
-                    <button type="submit" class="btn btn-default">Buscar</button>
-                </div><!-- /input-group -->
-                </form>
-            </div>
-            </div>
+<div class="pma-search-bar pma-bg-blue ">
+    <div class="container">
+        <div class="row">
+        <div class="col-md-12">
+            <form method="GET" class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Año <span class="caret"></span></button>
+                    <ul class="dropdown-menu">
+                    {% for ayear in year_list %}
+                      <li><a href="#" ref="{{ayear}}">{{ayear}}</a></li>
+                    {% endfor %}
+                    </ul>
+                </div>
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Municipio <span class="caret"></span></button>
+                    <ul class="dropdown-menu">
+                    {% for amunicipio in municipio_list %}
+                      <li><a href="#" ref="{{amunicipio.slug}}">{{amunicipio}}</a></li>
+                    {% endfor %}
+                    </ul>
+                </div><!-- /btn-group -->
+                <button type="submit" class="btn btn-default">Buscar</button>
+            </div><!-- /input-group -->
+            </form>
+        </div>
         </div>
     </div>
+</div>
 {% endblock %}
 
 {% block main_content %}
@@ -48,56 +47,88 @@
     <div class="container ">
         <div class="row">
             <div class="col-md-12">
-                {% block header_title %}
-                <h2 class="text-center"> <strong>Participemos</strong> en la consulta del <br> Presupuesto Municipal</h2>
-                <h4 class="text-center"> Informémonos dónde y cuándo será</h4>
+                {% block indicator_title %}
                 {% endblock %}
-                <div>
-                </div>
             </div>
         </div>
         <div class="row pma-header-summary wide">
-                {% block header_summary %}
-                {% endblock %}
+            {% block indicator_summary %}
+            {% endblock %}
         </div>
     </div>
 </div>
 
 {% block section1 %}
-<div class="container">
-{% block pagecontent %}
-{% endblock %}
-</div>
 {% endblock %}
 
 {% block section2 %}
-<div class="container">
-</div>
 {% endblock %}
 
 {% block section3 %}
 {% endblock %}
 
 {% block section4 %}
-<div class="container">
-</div>
 {% endblock %}
 
-<!--title historico -->
+<!-- ranking line -->
 {% block section5 %}
 {% endblock %}
-<!--info historica -->
+
+<!-- historic info -->
 {% block section6 %}
-<div class="container">
-</div>
 {% endblock %}
 
 {% block section7 %}
-<div class="container">
+<div class="pma-gradient">
+    <div class="container">
+        <div class="row" id="other-metrics-links">
+            <div class="col-md-3">
+                <h3 class="other-metrics-title"><strong>Otros Indicadores</strong><br/>
+                que puedes consultar</h3>
+            </div>
+            <div class="col-md-3 container-metrics-links">
+                <a href="{% url 'origen_gastos' %}?{% if municipio %}municipio={{municipio.slug}}{% endif %}&{% if year %}year={{ year }}{% endif %}">Origen de Gastos </a>
+                <br>
+                <a href="{% url 'inversion_categoria' %}?{% if municipio %}municipio={{municipio.slug}}{% endif %}&{% if year %}year={{ year }}{% endif %}">Destinos de Inversión</a>
+            </div>
+            <div class="col-md-3 container-metrics-links">
+                <a href="{% url 'gastos_funcion' %}?{% if municipio %}municipio={{municipio.slug}}{% endif %}&{% if year %}year={{ year }}{% endif %}">Gastos de Funcionamiento </a>
+                <br>
+                <a href="{% url 'ahorro_corriente' %}?{% if municipio %}municipio={{municipio.slug}}{% endif %}&{% if year %}year={{ year }}{% endif %}">Ahorro Corriente de Inversión</a>
+            </div>
+            <div class="col-md-3 container-metrics-links">
+                <a href="{% url 'gastos_personal' %}?{% if municipio %}municipio={{municipio.slug}}{% endif %}&{% if year %}year={{ year }}{% endif %}">Gastos de Personal </a>
+                <br>
+                <a href="{% url 'ejecucion_presupuesto' %}?{% if municipio %}municipio={{ municipio.slug }}{% endif %}&{% if year %}year={{ year }}{% endif %}">Ejecución Presupuestaria</a>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
 
 {% endblock %}
 
-{% block custom_footer_scripts %}
+{% block extra_footer_scripts %}
+    <script type="text/javascript" src="{% static 'js/jquery-migrate.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/jquery.history.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/raphael-min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/Tween.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bubbletree.js' %}"></script>
+    <script type="text/javascript" src="http://assets.openspending.org/openspendingjs/master/lib/aggregator.js"></script>
+    <script type="text/javascript" src="{% static 'js/cofog.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/bar-chart.js' %}"></script>
+    <script type="text/javascript">
+            var data = {{ bubble_data|safe }};
+    </script>
+    <script type="text/javascript" src="{% static 'js/pma-bubbletree.js' %}"></script>
+    <script>
+    $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip({
+                            placement : 'top'
+                        });
+            });
+    </script>
+    <script src="{% static 'js/highcharts.js' %}"></script>
+    <script src="{% static 'js/pma.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/horizontal-timeline.js' %}"></script>
 {% endblock %}
