--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -133,6 +133,10 @@
     {% block main_content %}
     {% endblock %}
 
+
+    {% block custom_body_block %}
+    {% endblock %}
+
     <footer class="footer">
         <div class="container">
             <div class="row">
