--- a/core/templates/inversionpiechart_bk.html
+++ b/core/templates/inversionpiechart_bk.html
@@ -1,65 +1,62 @@
-{% extends "_indicator.html" %}
+{% extends "base.html" %}
 {% load static thumbnail chartit %}
-{% load humanize %}
-{% load core_extras %}
-{% load mathfilters %}
+{% load humanize %} 
+{% load core_extras %} 
+{% load mathfilters %} 
+{% block main_content %}
+	{% descargar_excel "icat-all" %}
+    <h2 class="titular">Inversión municipal {{ municipio }} {{ year }}</h2>
+    <form method="GET">
+    <select name="year">
+    {% for ayear in year_list %}
+        <option {% if ayear == year|add:"0" %}selected{% endif %} value="{{ayear}}">{{ayear}}</option>
+    {% endfor %}
+    </select>
+    <select name="municipio">
+    <option value="">Consolidado Municipal</option>
+    {% for amunicipio in municipio_list %}
+        <option {% if amunicipio.slug == municipio.slug %}selected{% endif %} value="{{amunicipio.slug}}">{{amunicipio}}</option>
+    {% endfor %}
+    </select>
+    <input type="submit" value="Buscar"/>
+    </form>
+    <div class="clearfix"></div>
+    <ul id="invTab" class="nav nav-tabs" role="tablist">
+        <li role="presentation" class="active"><a href="#asignados" aria-controls="asignados" role="tab" data-toggle="tab">Asignado y ejecutado anual</a></li>
+        <li role="presentation"><a href="#invmodificacion" aria-controls="invmodificacion" role="tab" data-toggle="tab">Modificaciones al presupuesto</a></li>
+        <li role="presentation"><a href="#invhistorico" aria-controls="invhistorico" role="tab" data-toggle="tab">Informaci&oacute;n hist&oacute;rica</a></li>
+    </ul>
 
-{% block section1 %}
-<div class="container">
-    <div class="row">
-        <h2> <strong>Detalle de {{indicator_name}}</strong> <br/> del período</h2>
-        <hr class="pma-line-2">
-        <div class="col-md-7">
-            <div class="chart-update col-md-1 float-left">
-                    <span class="pma-icon pe-7s-bubble pma-fg-gray"
-                        aria-hidden="true" id="chart-bubble-1"></span>
-                    <span id="chart-pie-1" class="pma-icon pe-7s-graph
-                        pma-fg-gray" aria-hidden="true"></span>
-                    <span id="chart-bar-1" class="pma-icon pe-7s-graph3 pma-fg-gray" aria-hidden="true"></span>
-                    <span class="pma-icon pe-7s-graph2 pma-fg-gray"
-                        aria-hidden="true" id="icons"></span>
-            </div>
-            <div class="col-md-11 bubbletree-container chart-container">
-                <div id="bubble-1" class="bubbletree-wrapper view-main">
-                    <div class="bubbletree"></div>
-                </div>
-                <div id="pie-1" class="view-alternative"> Pastel Ejecucion por
-                Rubros </div>
-                <div id="chart-bar-1" class="view-alternative"> Barras Ejecucion por
-                Rubros </div>
-                <div id="chart-lines-1" class="view-alternative"> Chart will be rendered here
-                </div>
-                <div id="icons" class="view-alternative">
-                </div>
-            </div>
-        </div>
-        <div class="col-md-5 table-responsive">
-            <table class="table table-striped table-hover">
-                <thead>
-                    <tr class="">
-                        <th>Clasificación</th>
-                        <th class="text-right">Inicial</th>
-                        <th class="text-right">Ejecutado</th>
-                    </tr>
-                </thead>
-                {% for row in totales %}
-                <tr>
-                    <td>{{ row.catinversion__nombre}}</td>
-                    <td class="text-right">{{ row.asignado_percent|million|intcomma }}</td>
-                    <td class="text-right">{{ row.ejecutado_percent|million|intcomma|default:"0" }}</td>
-                </tr>
-                {% endfor %}
-            </table>
-        </div>
-    </div>
-</div>
+    {% if municipio and charts.4 %}
+        {{ charts|load_charts:"tipo, area, fuente, fuente_pie, comparativo_anios, none, asignado" }}
+    {% else %}
+        {{ charts|load_charts:"tipo, area, fuente, fuente_pie, asignado, ultimos, fuentes" }}
+    {% endif %}
 
-{% endblock %}
-
-{% block main_content_previous %}
     <!-- tabla4 -->
     <div id="invTabContent" class="tab-content">
       <div role="tabpanel" class="tab-pane fade active in" id="asignados" aria-labelledby="asignados-tab">
+        <!--maribel 21/07 - ingresos resumen -->
+        <div class="row alert alert-success">
+            <div class="col-md-12">
+                <div class="col-md-4">
+                    <img src="{% static 'img/gfasignado.png' %}" class="img-responsive margen pull-left" alt="inversion monto asignado" />
+                    <h3 class="titular" data-toggle="popover" title="Presupuestado" data-content="Indica el Porcentaje que Los Municipios  a nivel nacional destinaron para cubrir los ingresos de administración y prestación de los">Presupuesto inicial</h3>
+                    <span class="cifra grande text-primary">{{ asignado|million|intcomma }}</span>
+                </div>
+                <div class="col-md-4">
+                    <img src="{% static 'img/gf.png' %}" class="img-responsive margen pull-left" alt="inversion monto asignado" />
+                    <h3>Ejecutado </h3><span class="cifra text-warning grande">{{ ejecutado|million|intcomma }}</span>
+                </div>
+                {% if municipio %}
+                    <div class="col-md-4">
+                    <img src="{% static 'img/categoria2.png' %}" class="img-responsive margen pull-left" alt="Categoria de municipio" />
+                    <h3>Categor&iacute;a de municipio </h3><span class="cifra text-success grande">{{ mi_clase.clasificacion }}</span>
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+        <!--Fin de resumen-->
 
         <div class="col-md-5">
             <!--maribel 21/07- tabla1 inversion municipal -->
@@ -68,29 +65,29 @@
             <h4 class="text-info">Porcentaje por clasificación
               <a class="btn btn-success" role="button" data-toggle="collapse" href="#collapsepastel2"  aria-expanded="false" aria-controls="collapsePastel2">Ver gráfico</a>
             </h4>
-            <div class="collapse" id="collapsepastel1">
-                <div class="well col-md-8">
-                    <h3>Destino del gastos</h3>
+            <div class="collapse" id="collapsepastel1">               
+                <div class="well col-md-8">                                              
+                    <h3>Destino del gastos</h3> 
                     <div id='fuente_pie' class="col-md-8"> Chart will be rendered here </div>
                     <br clear="all" />
-                </div>
-            </div>
-            <div class="collapse" id="collapsepastel2">
-                <div class="well">
+                </div>                                           
+            </div> 
+            <div class="collapse" id="collapsepastel2">               
+                <div class="well">                                              
                     <div id='asignado' class="col-md-4"> Chart will be rendered here </div>
-                </div>
-            </div>
-            <div class="collapse" id="collapsepastel">
-                <div class="well">
-                    <h3>Destino del gastos</h3>
+                </div>                                           
+            </div> 
+            <div class="collapse" id="collapsepastel">               
+                <div class="well">                                              
+                    <h3>Destino del gastos</h3> 
                     <div id='ejecutado' class="col-md-4"> Chart will be rendered here </div>
-                </div>
-            </div>
-            <div class="collapse" id="collapsebarra">
-                <div class="well">
+                </div>                                           
+            </div> 
+            <div class="collapse" id="collapsebarra">               
+                <div class="well">                                              
                     <div id='tipo' class="col-md-5"> Chart will be rendered here </div>
-                </div>
-            </div>
+                </div>                                           
+            </div> 
             <table class="table">
             <tr class="info"><th colspan="2">Clasificación</th><th>Inicial</th><th>Ejecutado</th></tr>
             {% for total in totales %}
@@ -131,10 +128,10 @@
                 </td>
               </tr>
               {% endfor %}
-              <tr class="success bold">
-                <td>TOTAL</td>
-                <td class="text-right">{{ asignado|million|intcomma }}</td>
-                <td class="text-right">{{ ejecutado|million|intcomma }}</td>
+              <tr class="success bold">                                       
+                <td>TOTAL</td>                                              
+                <td class="text-right">{{ asignado|million|intcomma }}</td>                            
+                <td class="text-right">{{ ejecutado|million|intcomma }}</td>                           
                 <td class="montos text-right">{% if asignado %}{{ ejecutado|div:asignado|mul:100|floatformat:1 }}%{% endif %}</td>
               </tr>
             </tbody>
@@ -162,7 +159,7 @@
                 </tr>
             </table>
         </div>
-        <!-- /fin inversion tabla3 nacional -->
+        <!-- /fin inversion tabla3 nacional -->                                                      
         {% endif %}
         <!-- maribel 21/07 inversion-tabla3-municipal -->
         {% if municipio %}
@@ -217,7 +214,7 @@
                     <td></td>
                     <td></td>
                     <td colspan="4" class="success text-center">
-                        <h4>Modificación intermedia
+                        <h4>Modificación intermedia 
                         <a href="#" data-toggle="tooltip" data-original-title="Modificación al {{ year_data.actualizado }}" class="link-info">*</a>
                         </h4>
                     </td>
@@ -227,7 +224,7 @@
                         </h4>
                     </td>
                 </tr>
-                <tr class="info"> <th>Rubros de inversión</th> <th>Inicial</th>
+                <tr class="info"> <th>Rubros de inversión</th> <th>Inicial</th> 
                     <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th>
                     <th>Actualizado</th> <th>Modificación</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th>
                 </tr>
@@ -235,7 +232,7 @@
                 <tr>
                     <td class="text-left">{{ row.catinversion__nombre }}</td>
                     <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
-
+    
                     <td class="success text-right">{{ row.actualizado_asignado|million|intcomma }}</td>
                     <td class="success text-right">{% if row.actualizado_asignado and row.inicial_asignado %}{{ row.actualizado_asignado|sub:row.inicial_asignado|million|intcomma }}{% else %}0{% endif %}</td>
                     <td class="success text-right">{{ row.actualizado_ejecutado|million|intcomma }}</td>
@@ -266,15 +263,15 @@
         <h4 class="text-info">En millones de córdobas corrientes
               <a class="btn btn-success" role="button" data-toggle="collapse" href="#collapsehistorico"  aria-expanded="false" aria-controls="collapsehistorico">Ver gráfico</a>
         </h4>
-        <div class="collapse" id="collapsehistorico">
-           <div class="well col-md-8">
+        <div class="collapse" id="collapsehistorico">               
+           <div class="well col-md-8">                                              
                 <div id='comparativo_anios' class="col-md-8"> Chart will be rendered here </div>
-           </div>
-        </div>
+           </div>                                           
+        </div> 
         <div class="col-md-9">
             <table class="table table-bordered">
                 <tr class="info"><th>Años</th> <th>Inicial</th> <th>Ejecutado</th> <th><a href="#" data-toggle="tooltip" data-original-title="Ejecutado/Actualizado" class="link-info">%</a></th></tr>
-                {% for row in anuales %}
+                {% for row in anuales %} 
                 <tr>
                     <td class="text-left"><h4>{{ row.inversion__anio }}</h4></td>
                     <td class="text-right">{{ row.asignado|million|intcomma }}</td>
@@ -311,7 +308,7 @@
                 -->
              </tr>
            {% endfor %}
-
+ 
           </table>
         </div>
      </div>
@@ -324,12 +321,4 @@
     <!--div id='percapita_anios'> Inversion percapita  </div-->
     <div id='ejecutado' style="display:none;">Inversion ejecutada </div>
     <div id='ultimos' style="display:none;">Ultimos anios </div>
-{% endblock %}
-
-{% block custom_scripts %}
-    {% if municipio and charts.4 %}
-        {{ charts|load_charts:"tipo, area, fuente, fuente_pie, comparativo_anios, none, asignado" }}
-    {% else %}
-        {{ charts|load_charts:"tipo, area, fuente, fuente_pie, asignado, ultimos, fuentes" }}
-    {% endif %}
 {% endblock %}
